--- a/Airbnb_project_notebook.ipynb
+++ b/Airbnb_project_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5069,7 +5069,7 @@
     "\n",
     "What is the averaged price per accommodate in the different neighbourhoods of the city ?\n",
     "\n",
-    "The bar plot below shows that averaged prices per person (i.e. daily price of a given accommodation divided by the number of accommodates) range between 30 til 50 US$ in Seatle city, in which the most expensive neighbourhoods (per person) in average are Interbay, Cascade, Queen Anne, Downtown and Capitol Hill, while the least expensive neighbourhood are Seward Park, Northgate, Delridge and Rainier Valley.\n",
+    "The bar plot below shows that averaged prices per person (i.e. daily price of a given accommodation divided by the number of accommodates) range between 30 til 50 US$ in Seattle, in which the most expensive neighbourhoods (per person) in average are Interbay, Cascade, Queen Anne, Downtown and Capitol Hill, while the least expensive neighbourhood are Seward Park, Northgate, Delridge and Rainier Valley.\n",
     "The error bars in the plot denote the standard deviation of the prices, which quantifies the variability of the prices within each neighbourhood. For instance, the highest variability of prices per person occurs in the neighbourhood Magnolia, and the lowest variability occurs in Seward Park."
    ]
   },
@@ -5115,7 +5115,7 @@
     "\n",
     "Is there any correlation between the response rate by the host and the price of the accommodation - normalized by the number of accommodates? The intent here is to identify if there is any trend indicating that relatively cheaper accommodations (i.e. lower price/number of accommodates ratio) eventually have also a lower response rate by the host, in other words, they are more difficult to book.\n",
     "\n",
-    "The plots bellow show that there is NOT a clear indication that cheaper accommodations are in general also harder to be booked (Pearsons correlation coefficient = -0.01). Despite less accommodations with normalized price above US$ 50 have response rates lower than 80% in comparison with accommodations with normalized price below US$ 50, the sampling size for the first group (price per accommodate < US$ 50) is significantly higher than in the second group (price per accommodate < US$ 50). The plot also shows that the averaged response rate for the accommodations in Seatle is 94.89 %."
+    "The plots bellow show that there is NOT a clear indication that cheaper accommodations are in general also harder to be booked (Pearsons correlation coefficient = -0.01). Despite less accommodations with normalized price above US$ 50 have response rates lower than 80% in comparison with accommodations with normalized price below US$ 50, the sampling size for the first group (price per accommodate < US$ 50) is significantly higher than in the second group (price per accommodate < US$ 50). The plot also shows that the averaged response rate for the accommodations in Seattle is 94.89 %."
    ]
   },
   {
@@ -5160,9 +5160,9 @@
    "source": [
     "Question 3:\n",
     "\n",
-    "How the 10 most abundant property types are distributted accross the neighbourhoods of Seatle?\n",
+    "How the 10 most abundant property types are distributted accross the neighbourhoods of Seattle?\n",
     "\n",
-    "The ranking of the property types in Seatle shows that houses and appartments are by far the dominant properties available. In general there are more houses available per neighbourhood than apartments in Seatle, with some exceptions such as in the neighbourhoods Capitol Hill, Cascade, Downtown, Queen Anne and University District. On the other hand, townhouses are the third most abbudant property type, especially in Central Area, and Condominium (4th most abundant) are most located in Downtown. \n"
+    "The ranking of the property types in Seattle shows that houses and appartments are by far the dominant properties available. In general there are more houses available per neighbourhood than apartments, with some exceptions such as in the neighbourhoods Capitol Hill, Cascade, Downtown, Queen Anne and University District. On the other hand, townhouses are the third most abundant property type, especially in Central Area, and Condominium (4th most abundant) are most located in Downtown. \n"
    ]
   },
   {
@@ -6441,7 +6441,7 @@
     "\n",
     "Can we leverage Machine Learning to predict the price of an accomodation based on the features selected by domain-knowledge? \n",
     "\n",
-    "Considering that pure categorical variables, such as the location of the accommodations (neighbourhood_group_cleansed), property type and cancelation policies may also play a role on the decision about price by the hosts, these variables were next included on the 'features_sel' - after one-hot-encoding - and next a predictive model using 1) linear regression and 2) random forest were built to predict 'price'. The intent is to i) assess the possibility of modelling the price using the selected features, and ii) identify the most important features that are related to the price.  "
+    "Considering that pure categorical variables, such as the location of the accommodations (neighbourhood_group_cleansed), property type and cancelation policies may also play a role on the decision about price by the hosts, these variables were next included on the 'features_sel' - after one-hot-encoding - and next a predictive model using Random Forest Regressors were built to predict 'price'. The intent is to i) assess the possibility of modelling the price using the selected features, and ii) identify the most important features that are related to the price.  "
    ]
   },
   {
@@ -6600,7 +6600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q5: The Random Forest regression model could successfully predict the price of the accommodations in Seatle,resulting in a RMSE for the Test set equals to US$ 56. The model has indicated that features related to the size of the accommodations, such as accommodates, bathrooms and bedrooms, to be important for the estimation of the prices. The feature 'review_per_month' and features related to the location and property type, such as accommodations in Downtown and property type as Houses, have also shown to be important on the prediction of price."
+    "Q5: The Random Forest Regression model could successfully predict the price of the accommodations in Seattle,resulting in a RMSE for the Test set equals to US$ 56. The model has indicated that features related to the size of the accommodations, such as accommodates, bathrooms and bedrooms, to be important for the estimation of the prices. The feature 'review_per_month' and features related to the location and property type, such as accommodations in Downtown and property type as Houses, have also shown to be important on the prediction of price."
    ]
   },
   {
@@ -6609,23 +6609,23 @@
    "source": [
     "Final Conclusions\n",
     "\n",
-    "This project aimed to extract different sources of information (or patterns) presented in the Airbnb dataset that can help understanding the Airbnb market in Seatle - USA. The main conclusions obtained from the analysis of this dataset are summarizeed below:\n",
+    "This project aimed to extract different sources of information (or patterns) presented in the Airbnb dataset that can help understanding the Airbnb market in Seattle - USA. The main conclusions obtained from the analysis of this dataset are summarizeed below:\n",
     "\n",
-    "1) The averaged cost of an accommodation in Seatle per person (and therefore mitigating the effect of the type and size of the property) was calculated in each neighbourhood group (including the cost variability within each neighbourhood), therefore providing information about cost variations accross different locations in the city.\n",
+    "1) The averaged cost of an accommodation in Seattle per person (and therefore mitigating the effect of the type and size of the property) was calculated in each neighbourhood group (including the cost variability within each neighbourhood), therefore providing information about cost variations accross different locations in the city.\n",
     "\n",
     "2) No direct relation has been identified in the data with respect to the effect of the response rate given by the host on the price of the accommodation, which indicates that Airbnb customers looking for cheaper accommodation get in average the same reaction (or treatment) by the respective hosts as customers looking for more expensive accommodations - which are in teory more lucrative for the hosts.\n",
     "\n",
-    "3) The distribution of the different property types has been identified in each neighbourhood, and therefore providing potential customers with the most abbundant type of accomodation available in Seatle and which locations a certain type of accommodation is more available.\n",
+    "3) The distribution of the different property types has been identified in each neighbourhood, and therefore providing potential customers with the most abundant type of accommodation available in Seatle and which locations a certain type of accommodation is more available.\n",
     "\n",
-    "4) The features in the dataset showing higher linear correlation with the price have been identified, which helps potential customers to understand what are the main driving factors affecting the price of the accomodations in Seatle.\n",
+    "4) The features in the dataset showing higher linear correlation with the price have been identified, which helps potential customers to understand what are the main driving factors affecting the price of the accommodations in Seatle.\n",
     "\n",
-    "5) A machine learning model based on Random Forest Regressor has been developed and validated to predict the price of the accomodations in Seatle. The interpretation of the importance of the features for the model reinforces and expand the knowledge about the main features of the accommodations that affect the price in this city. "
+    "5) A machine learning model based on Random Forest Regressor has been developed and validated to predict the price of the accommodations in Seattle. The interpretation of the importance of the features for the model reinforces and expand the knowledge about the main features of the accommodations that affect the price in this city. "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
